# coco

./: .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  README.md  SESSION-BOOTSTRAP.md  claude-progress.md  clean-state-checklist.md  feature_list.json  index.html  init.ps1  init.sh  main.py  pyproject.toml  spike_audio.py  style.css  test_head.py
.github/: paths-filter.yml
coco/: __init__.py  __main__.py  actions.py  asr.py  audio_resilience.py  audio_usb_probe.py  banner.py  config.py  conversation.py  dialog.py  dialog_summary.py  emotion.py  gesture_dialog.py  idle.py  intent.py  interact.py  llm.py  logging_setup.py  main.py  metrics.py  multimodal_fusion.py  offline_fallback.py  power_state.py  proactive.py  proactive_trace.py  profile.py  tts.py  vad_trigger.py  wake_word.py
docs/: regression-policy.md  uat-real-robot.md  uat-runbook.md  vision-ttl-design.md
research/: chinese-asr-tts-selection.md  control-app-deployment-research.md  proactive_trace_contract.md  sim-vs-real-gaps.md  simulator-audio-findings.md  spike-audio-attempt.md
scripts/: _history_writer.py  enroll_face.py  fetch_asr_models.sh  fetch_kws_models.sh  fetch_tts_models.sh  gen_gesture_fixtures.py  gen_vision_fixtures.py  health_summary.py  install_pre_commit.sh  lint_paths_filter.py  lint_workflows.py  llm_usage_summary.py  pre-commit-hook.sh  precommit_impact.py  proactive_trace_summary.py  reset_profile.py  restore_unrelated_evidence.py  run_verify_all.py  smoke.py  spike_vision.py  verify_asr_microphone.py  verify_asr_vad_offline.py  verify_asr_wav.py  verify_audio003_app_integration.py  verify_audio003_tts.py  verify_audio_008.py  verify_audio_009.py  verify_audio_010.py  verify_audio_011.py  verify_audio_012.py  verify_audio_013.py  verify_companion001_app_integration.py  (+104 more)
static/: index.html
(+141 files in other folders)
