[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coco"
version = "0.1.0"
description = "Coco / 可可 — 基于 Reachy Mini 的学习伴侣机器人"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "reachy-mini>=1.4.0",
    "sherpa-onnx==1.13.1",
    "sherpa-onnx-core==1.13.1",
    "sounddevice>=0.5.5",
]
keywords = ["reachy-mini-app"]

[project.entry-points."reachy_mini_apps"]
coco = "coco.main:Coco"

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["coco*"]

[tool.setuptools.package-data]
coco = ["**/*"]

# 声明目标平台，让 uv 给三个平台各 resolve 一份兼容 wheel。
# reachy-mini 在 sys_platform != 'linux' 时硬依赖 gstreamer-bundle，
# 而 gstreamer-msvc-runtime 仅 Windows 有 wheel —— 不显式列出目标平台时 uv 无法 resolve。
[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
